@@ -1,3 +1,7 @@
+2009-10-20  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Renamed TSFE postproc hook class
+
 2009-04-16  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed issue with HTML tags in search results title
